--- a/templates/base.html
+++ b/templates/base.html
@@ -2,12 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Inverness Florida EAA Chapter Formation</title>
+    <link rel="stylesheet" href="/style.css" />
   </head>
 
   <body>
     <section class="section">
-      <div class="container">{% block content %} {% endblock %}</div>
+      <div class="content">{% block content %} {% endblock %}</div>
     </section>
   </body>
 </html>
