update meeting info

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,9 +9,13 @@
   >
 </div>
 <h2>
-  Informational meeting will be held at the Inverness Airport on April 16, 2022
-  from 9:00 am to 11:00 am for those who would like to learn more.
+  Meetings held at the Inverness Aiport FBO every third Saturday from 9:00 am to
+  11:00 am.
 </h2>
+<h3>
+  Next meeting will be held on May 21, 2022 from 9:00 am to 11:00 am and one
+  item on the agenda is to elect the board members.
+</h3>
 <h3>
   Complete the
   <a
