migrate to eaa1674.org

--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Inverness Florida EAA Chapter Formation</title>
+    <title>EAA Chapter 1674 | Inverness, Florida (KINF)</title>
     <link rel="stylesheet" href="/style.css" />
   </head>
 
