--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %} {% block content %}
 <div class="heading">
-  <h1 class="title">Inverness Florida EAA Chapter Formation</h1>
+  <h1 class="title">EAA Chapter 1674</h1>
   <a
     class="button is-link"
     href="https://docs.google.com/forms/d/e/1FAIpQLSc1SligUHLudh_Ca8Ou2EWo-nT2NsmsHoSSQrI1_3uXqoaQbA/viewform"
@@ -9,13 +9,19 @@
   >
 </div>
 <h2>
-  Meetings held at the Inverness Aiport FBO every third Saturday from 9:00 am to
-  11:00 am.
+  Meetings are held at the Inverness Aiport FBO every third Saturday from 9:00
+  am to 11:00 am located at the South end of the airport in the blue building.
 </h2>
-<h3>
-  Next meeting will be held on May 21, 2022 from 9:00 am to 11:00 am and one
-  item on the agenda is to elect the board members.
-</h3>
+<h3>Next meeting will be held on June 18, 2022 from 9:00 am to 11:00 am.</h3>
+<p>
+  Please watch the webinar
+  <a
+    href="https://www.eaa.org/Videos/Webinars/EAA-Programs/6303923122001"
+    target="_blank"
+    >Welcome to EAA – Getting the Most Out of Your Membership 2022</a
+  >
+  once you are an active member.
+</p>
 <h3>
   Complete the
   <a
@@ -84,11 +90,11 @@
             target="_blank"
             >National EAA Membership</a
           >
-          and is currently $34 for a single membership for one year when
-          selecting auto renew.
+          that is the same type for the local chapter.
         </li>
         <li>
-          The Inverness chapter is targeting $30 per year for single membership.
+          The Inverness chapter is $20 per year for individual membership, $25
+          for family, and free for students 18 and under.
         </li>
       </ul>
     </li>
